--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;500&family=Courier+Prime:wght@400;700&family=Montserrat:wght@200;300;400&display=swap');
+@import '../../assets/styles/variables.scss';
 
 body {
   margin: 0;
